--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <title>Lab 04</title>
 </head>
-<body>
-    
+<body class="container">
+    <header><span>a</span></header>
+    <div><span>b</span></div>
+    <ul>
+        <li><span>c</span></li>
+        <li><span>d</span></li>
+    </ul>
+    <ul>
+        <li><span>e</span></li>
+        <li><span>f</span></li>
+        <li><span>g</span></li>
+        <li><span>h</span></li>
+    </ul>
+    <footer><span>i</span></footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
