--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header><span>a</span></header>
     <div><span>b</span></div>
     <ul>
-        <li><span>c</span></li>
-        <li><span>d</span></li>
+        <li class="twoby"><span>c</span></li>
+        <li class="twoby"><span>d</span></li>
     </ul>
     <ul>
-        <li><span>e</span></li>
-        <li><span>f</span></li>
-        <li><span>g</span></li>
-        <li><span>h</span></li>
+        <li class="fourby"><span>e</span></li>
+        <li class="fourby"><span>f</span></li>
+        <li class="fourby"><span>g</span></li>
+        <li class="fourby"><span>h</span></li>
     </ul>
     <footer><span>i</span></footer>
     <script src="js/app.js"></script>
