--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Lab 04</title>
 </head>
+
 <body class="container">
     <header><span>a</span></header>
     <div><span>b</span></div>
@@ -23,4 +25,5 @@
     <footer><span>i</span></footer>
     <script src="js/app.js"></script>
 </body>
+
 </html>
